# DIVOpenCV

./: CMakeLists.txt  main.cpp
Application/: Application.cpp  Application.h
Login/: LoginWindow.cpp  LoginWindow.h  LoginWindow.ui
MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
QtLearning/QtLearnColorUi/: QtLearnColorUi.cpp  QtLearnColorUi.h  QtLearnColorUi.ui
Resources/: resources.qrc
